# ncrsh

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
checkpoints/: README.md
configs/: __init__.py  default.yaml
data/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: index.md
docs/api/: data.md
docs/community/: faq.md
docs/getting_started/: installation.md  quickstart.md
docs/guide/: data_loading.md  training.md
examples/: basic_dataloader.py  image_classification.py  text_classification.py
notebooks/: README.md  getting_started.ipynb
scripts/: analyze.py  preprocess.py  train.py
src/ncrsh/: __init__.py  tensor.py
src/ncrsh/data/: README.md  __init__.py  dataloader.py  dataloader_iter.py  dataset.py  sampler.py
src/ncrsh/data/_utils/: __init__.py  collate.py  signal_handling.py  worker.py
src/ncrsh/nn/: README.md  activation.py  modules.py  transformer.py
src/ncrsh/nn/loss/: __init__.py  cross_entropy.py  l1.py  loss.py  mse.py
src/ncrsh/optim/: README.md  __init__.py  adam.py  optimizer.py  sgd.py
src/ncrsh/tokenizers/: README.md  __init__.py  tokenizer_base.py
src/ncrsh/utils/: README.md  __init__.py  checkpoint.py  data_utils.py  visualize.py
tests/: __init__.py  conftest.py  test_data_utils.py  test_loss.py  test_model_utils.py  test_nn.py  test_optim.py  test_tensor.py  test_transformer.py  test_visualization.py
